--- a/public/viz.html
+++ b/public/viz.html
@@ -30,6 +30,7 @@
         <script type="text/javascript" src="./external/js/d3-scale-chromatic.v3.min.js"></script>
         <script type="text/javascript" src="./external/js/raphael.min.js"></script>
         <script src="./js/sankey.js" type="text/javascript"></script>
+        <script src="./js/sankey.specificityplot.js" type="text/javascript"></script>
         <script src="./js/cpdbviz.js" type="text/javascript"></script>
         <!-- Libraries below are needed to saving plots as PDFs    -->
         <script type="text/javascript" src="./external/js/pdfkit.standalone.js"></script>
@@ -148,6 +149,7 @@ function refreshCCISummaryChordPlots() {
           <li><a href="#sge_title">Single gene expression</a></li>
           <li class="divider"></li>
              <div class="toc-header left">CellphoneDB predictions</div>
+          <li><a href="#cci_specificity_title">Cell-cell Communication Specificity - At a glance</a></li>
           <li><a href="#cci_summary_title">Cell-cell Communication - Summary</a></li>
           <li><a href="#cci_search_title">Cell-cell Communication - Search</a></li>
         </ul>
@@ -286,6 +288,27 @@ function refreshCCISummaryChordPlots() {
                   </div>
               </div> <!-- <div class="row"> -->
           </div> <!-- <div class="card"> -->
+        </div> <!-- <div class="col s12"> -->
+
+        <div id="cci_specificity_section" class="col s12">
+          <div class="row">
+            <!-- Cell-cell Communication Specificity sankey plot -->
+            <div>
+              <div class="col s12 m12 12">
+                <div class="card">
+                  <div class="card-content black-text col s12">
+                    <span id="cci_specificity_title" class="card card-title center">Cell-cell Communication Specificity - At at glance</span>
+                    <button id="cci_specificity_button" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci_specificity','cci_specificity_title','cci_specificity_header')">
+                        <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
+                    </button>
+                      <div id="cci_specificity_header"></div>
+                      <div id="cci_specificity" style="width:1000px;height:1500px"></div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div> <!-- <div class="row"> -->
         </div> <!-- <div class="col s12"> -->
 
         <div class="col s12">
