cci_summary plot: allow the user to display significant interactions only

--- a/public/viz.html
+++ b/public/viz.html
@@ -337,6 +337,12 @@ function refreshCCISummaryChordPlots() {
                       <span id="cci_summary_show_all_celltypes_label">Show all cell types</span>
                   </label>
               </div>
+              <div id="cci_summary_show_significant_interactions_only_div" style="padding-top: 20px; padding-left: 30px;" hidden>
+                  <label>
+                      <input id="cci_summary_show_significant_interactions_only" type="checkbox" class="filled-in"/>
+                      <span id="cci_summary_show_significant_interactions_only_label">Show significant interactions only</span>
+                  </label>
+              </div>
               <div>
                   <div id="cci_summary_class_filter_div" style="padding-left: 20px; padding-right: 20px" hidden>
                       <div class="input-field">
