CCI Specificity At a glance - 1. Swapped columns in sankey: ip-ip class-ctp > ip class-ip-ctp, following feedback from Luz; 2. top 5 -> top 3 - in order to keep the vertical plot size manageable

--- a/public/viz.html
+++ b/public/viz.html
@@ -302,14 +302,13 @@ function refreshCCISummaryChordPlots() {
                     </button>
                     <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
                         <i id="specificity_ataglance_help" class="material-icons left tooltipped"
-                           data-tooltip="Click on an interacting pair class (middle column) to see
-                           the averaged means of the corresponding interacting pairs and cell type pairs">info_outline</i>
+                           data-tooltip="Mouse over a node in the plot below to see the averaged means for each of the edges connected to that node.">info_outline</i>
                     </span>
-                      <div id="cci_specificity_header" class="center"><img src="img/cci_specificity_legend.png" alt="Cell-cell Communication Specificity - At at glance - legend"></img></div>
+                      <div id="cci_specificity_header" class="center"><img src="img/cci_specificity_legend.png" width="50%" height="50%" alt="Cell-cell Communication Specificity - At at glance - legend"></img></div>
                       <div id="cci_specificity_legend" class="center">Plot interpretation guidance:
                           Higher averaged means across fewer interacting/cell type pairs may be indicative of a more
                       specific activity of the corresponding interaction class/pathway.</div>
-                      <div id="cci_specificity" style="width:2000px;height:1000px"></div>
+                      <div id="cci_specificity" style="width:2000px;height:1200px"></div>
                   </div>
                 </div>
               </div>
