--- a/public/viz.html
+++ b/public/viz.html
@@ -164,6 +164,10 @@ function refreshCCISummaryChordPlots() {
                     <button id="ctcomp_save_button" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('ctcomp','ctcomp_title','ctcomp_header')">
                         <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                     </button>
+                      <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                        <i id="celltype_composition_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the mapping between different cell type characteristics specified in the file under the configuration key: 'celltype_composition'">info_outline</i>
+                      </span>
                       <div id="ctcomp_header" hidden></div>
                       <div id="ctcomp" style="width:1500px;height:700px"></div>
                   </div>
@@ -179,6 +183,10 @@ function refreshCCISummaryChordPlots() {
                     <button id="spme_save_button" style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('spme','spme_title','spme_header')">
                         <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                     </button>
+                      <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                        <i id="spme_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the mapping between cell types and microenvironments specified in the file under the configuration key: 'microenvironments'">info_outline</i>
+                      </span>
                     <div id="spme_header" hidden>Cell Type - Microenvironment</div>
                       <div id="spme" style="width:800px"></div>
                   </div>
@@ -280,6 +288,10 @@ function refreshCCISummaryChordPlots() {
                           <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('sge','sge_title','sge_header')">
                              <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                           </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="sge_help" class="material-icons left tooltipped"
+                               data-tooltip="The plot shows mean expressions of the genes/complexes and cell types/microenvironments selected in the filter. The data comes from files specified in the configuration keys: 'deconvoluted_result', 'deconvoluted_percents' and 'microenvironments'.">info_outline</i>
+                          </span>
                           <div id="sge_header" hidden></div>
                             <div id="sge" style="width:1000px"></div>
                         </div>
@@ -302,12 +314,19 @@ function refreshCCISummaryChordPlots() {
                     </button>
                     <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
                         <i id="specificity_ataglance_help" class="material-icons left tooltipped"
-                           data-tooltip="Mouse over a node in the plot below to see the averaged means for each of the edges connected to that node.">info_outline</i>
+                           data-tooltip="This plot helps to highlight interactions that may be specific to (groups of) cell type pairs.
+                           <p />It shows the top 3 interaction classes (ICs, by average expression across all cell types and interacting pairs),
+                           <br>and for each IC the top 3 interacting pairs plus the reminder (IPs, by average expression across all cell types),
+                           <br>and for each IP the top 3 cell types plus the reminder.
+                           <br>The edge thickness corresponds to the mean expression (in the case of the reminders, aggregated across all the
+                           constituents).
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means' and 'relevant_interactions'.
+                           <p />Mouse over a node in the plot below to see the averaged means for each of the edges connected to that node.">info_outline</i>
                     </span>
                       <div id="cci_specificity_header" class="center"><img src="img/cci_specificity_legend.png" width="50%" height="50%" alt="Cell-cell Communication Specificity - At at glance - legend"></img></div>
-                      <div id="cci_specificity_legend" class="center">Plot interpretation guidance:
+                      <div id="cci_specificity_legend" class="center">Note:
                           Higher averaged means across fewer interacting/cell type pairs may be indicative of a more
-                      specific activity of the corresponding interaction class/pathway.</div>
+                     specific activity of the corresponding interacting pair.</div>
                       <div id="cci_specificity" style="width:2000px;height:1200px"></div>
                   </div>
                 </div>
@@ -398,6 +417,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci0','cci_summary_title','cci0_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_all_celltypes_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions'
+                           (and 'microenvironments' and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci0_header" hidden></div>
                           <div id="cci0" style="width:1000px"></div>
                           <div id="cci0_chord" style="width:1000px" hidden></div>
@@ -415,6 +440,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci1','cci_summary_title','cci1_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me1_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci1_header" hidden></div>
                           <div id="cci1" style="width:400px"></div>
                           <div id="cci1_chord" style="width:400px" hidden></div>
@@ -430,6 +461,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci2','cci_summary_title','cci2_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me2_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci2_header" hidden></div>
                           <div id="cci2" style="width:400px"></div>
                           <div id="cci2_chord" style="width:400px" hidden></div>
@@ -445,6 +482,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci3','cci_summary_title','cci3_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me3_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci3_header" hidden></div>
                           <div id="cci3" style="width:400px"></div>
                           <div id="cci3_chord" style="width:400px" hidden></div>
@@ -463,6 +506,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci4','cci_summary_title','cci4_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me4_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci4_header" hidden></div>
                           <div id="cci4" style="width:400px"></div>
                           <div id="cci4_chord" style="width:400px" hidden></div>
@@ -478,6 +527,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci5','cci_summary_title','cci5_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me5_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci5_header" hidden></div>
                           <div id="cci5" style="width:400px"></div>
                           <div id="cci5_chord" style="width:400px" hidden></div>
@@ -493,6 +548,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci6','cci_summary_title','cci6_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me6_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci6_header" hidden></div>
                           <div id="cci6" style="width:400px"></div>
                           <div id="cci6_chord" style="width:400px" hidden></div>
@@ -510,6 +571,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci7','cci_summary_title','cci7_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me7_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci7_header" hidden></div>
                           <div id="cci7" style="width:400px"></div>
                           <div id="cci7_chord" style="width:400px" hidden></div>
@@ -525,6 +592,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci8','cci_summary_title','cci8_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me8_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci8_header" hidden></div>
                           <div id="cci8" style="width:400px"></div>
                           <div id="cci8_chord" style="width:400px" hidden></div>
@@ -540,6 +613,12 @@ function refreshCCISummaryChordPlots() {
                         <button style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2" onclick="downloadAsPDF('cci9','cci_summary_title','cci9_header')">
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                         </button>
+                          <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
+                            <i id="cci_summary_me9_help" class="material-icons left tooltipped"
+                           data-tooltip="The plot shows the number of significant interactions between each cell type pair in this microenviroment.
+                           <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions', 'microenvironments'
+                           (and 'interaction_scores' if applicable)">info_outline</i>
+                          </span>
                         <div id="cci9_header" hidden></div>
                           <div id="cci9" style="width:400px"></div>
                           <div id="cci9_chord" style="width:400px" hidden></div>
@@ -685,7 +764,11 @@ function refreshCCISummaryChordPlots() {
                            <i class="material-icons left tooltipped" data-tooltip="Download plot in PDF format">file_download</i>
                       </button>
                      <span style="text-transform: none;" class="btn-floating waves-effect waves-light btn-small z-depth-2">
-                           <i id="interacting_pair_help" class="material-icons left tooltipped" data-tooltip="">info_outline</i>
+                           <i id="interacting_pair_help" class="material-icons left tooltipped" data-tooltip=
+                                   "This plot shows significant interactions across the selected cell type/interacting pairs.
+                                   <br>The data comes from files specified in the configuration keys: 'analysis_means', 'relevant_interactions'
+                           (and 'microenvironments', 'interaction_scores' and 'pvalues' if applicable respectively)<p />"
+                           >info_outline</i>
                       </span>
                       <div style="padding-top: 20px;">
                           <span class="black-text text-lighten+10 switch-label">Show: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span>
