Added CellphoneDB Viz logo, at top right - on Luz's request

--- a/public/viz.html
+++ b/public/viz.html
@@ -129,6 +129,13 @@ function refreshCCISummaryChordPlots() {
 
 </script>
   <body>
+        <div style="padding-right: 30px" class="valign-wrapper right">
+          <h8 >Powered by</h8>
+          <a href="https://github.com/datasome/cellphonedbviz">
+              <img src="img/cellphonedbviz_logo.png" alt="CellphoneDB Viz logo" width="200" height="43">
+          </a>
+        </div>
+        <br>
         <h4 class="center" id="page_header"></h4>
         <div class="col s12">
           <div class="row">
@@ -825,8 +832,8 @@ function refreshCCISummaryChordPlots() {
           </div> <!-- <div class="card"> -->
         </div> <!-- <div class="col s12"> -->
 
-        <div class="card valign-wrapper">
-          <h6 style="padding-left: 30px">Powered by</h6>
+        <div class="valign-wrapper">
+          <h8 style="padding-left: 30px">Powered by</h8>
           <a href="https://github.com/datasome/cellphonedbviz">
               <img src="img/cellphonedbviz_logo.png" alt="CellphoneDB Viz logo" width="200" height="43">
           </a>
