Minimal proof-of-concept grid for cell-cell interaction cell type pair search
grid is labelled with interactive click to select/deselect for each cell pair

--- a/public/viz.html
+++ b/public/viz.html
@@ -727,7 +727,7 @@ function refreshCCISummaryChordPlots() {
                                           <div id="interacting_pairs_selection_logic" hidden>10</div>
                                           <a class="btn waves-effect waves-light btn-small z-depth-2 dropdown-trigger" style="text-transform: none;" data-target="cci_search_select_relevant_interactions_dropdown">
                                               Select significant/relevant interactions&nbsp;<i style="vertical-align: middle;" class="material-icons white-text">pageview</i></a>
-                                          <ul id="cci_search_select_relevant_interactions_dropdown" class="dropdown-content" tabindex="0" style="">
+                                          <ul id="cci_search_select_relevant_interactions_dropdown" class="dropdown-content" tabindex="0">
                                               <li><a href="javascript:refreshCCISearchPlot('10');">Top 10</a></li>
                                               <li><a href="javascript:refreshCCISearchPlot('20');">Top 20</a></li>
                                               <li><a href="javascript:refreshCCISearchPlot('40');">Top 40</a></li>
@@ -831,6 +831,7 @@ function refreshCCISummaryChordPlots() {
 <!--              </div> &lt;!&ndash; <div class="row"> &ndash;&gt;-->
           </div> <!-- <div class="card"> -->
         </div> <!-- <div class="col s12"> -->
+        <div id="select_cell_type_pairs_grid"></div>
 
         <div class="valign-wrapper">
           <h8 style="padding-left: 30px">Powered by</h8>
